crates/uv-integration/tests/it/snapshots/it__ecosystem__black-uv-lock-output.snap
---
source: crates/uv-integration/tests/it/ecosystem.rs
expression: snapshot
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Resolved 42 packages in [TIME]
