crates/uv-integration/tests/it/snapshots/it__ecosystem__home-assistant-core-uv-lock-output.snap
---
source: crates/uv-integration/tests/it/ecosystem.rs
expression: snapshot
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Resolved 97 packages in [TIME]
